<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contactUsFragment"
    style="@style/screen_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ContactUsFragment">
    <TextView
        android:id="@+id/contact_fragment_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_are_happy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="25dp"
        android:fontFamily="@font/alata"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        style="@style/edit_text_style"
        android:gravity="center"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/phone_number_et"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        style="@style/edit_text_style"
        android:gravity="center"
        android:hint="@string/enter_your_phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_et"
        android:layout_marginTop="7dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/service_et"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        style="@style/edit_text_style"
        android:gravity="center"
        android:hint="@string/choose_service"
        android:inputType="text"
        android:layout_marginTop="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number_et"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <com.reginald.editspinner.EditSpinner
        android:id="@+id/edit_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dropDownDrawable="@drawable/spinner_icon"
        app:dropDownDrawableSpacing="15dp"
        app:dropDownDrawableWidth="25dp"
        app:dropDownDrawableHeight="25dp"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/message_et"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        style="@style/edit_text_style"
        android:gravity="center_horizontal"
        android:paddingTop="7dp"
        android:inputType="textAutoCorrect"
        android:hint="@string/enter_your_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/service_et"
        android:layout_marginTop="7dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/networkFragment_contact_us_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        style="@style/button_background"
        android:fontFamily="@font/inter_medium"
        android:background="@drawable/contact_us_btn_bg"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />


</androidx.constraintlayout.widget.ConstraintLayout>