<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    style="@style/screen_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.user.AboutFragment"
    android:id="@+id/about_fragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/about_image"
            android:layout_width="350dp"
            android:layout_height="250dp"
            app:shapeAppearanceOverlay="@style/ImageRoundedCorners"
            android:layout_marginTop="40dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/corporate"
            />
        <TextView
            android:id="@+id/about_us_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            style="@style/text_color"
            app:layout_constraintTop_toBottomOf="@id/about_image"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginTop="45dp"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/brief_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            style="@style/text_color_description"
            app:layout_constraintTop_toBottomOf="@id/about_us_tv"
            android:padding="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/inter_medium"
            />







        <TextView
            android:id="@+id/our_location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/our_location"
            style="@style/text_color"
            app:layout_constraintTop_toBottomOf="@id/brief_tv"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            style="@style/text_color_description"
            app:layout_constraintTop_toBottomOf="@id/our_location_tv"
            android:textSize="20sp"
            android:fontFamily="@font/inter_medium"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/join_us_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_us_on"
            style="@style/text_color"
            app:layout_constraintTop_toBottomOf="@id/location_tv"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/inter_medium"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/join_us_tv"
            android:orientation="horizontal"
            >
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/facebook"
                android:paddingTop="15dp"
                app:shapeAppearanceOverlay="@style/ImageRoundedCorners"
                android:scaleType="centerCrop"
                android:layout_margin="2dp"
                app:layout_constraintTop_toBottomOf="@id/join_us_tv"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingStart="15dp"
                android:src="@drawable/facebook"
                />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/instegram"
                android:paddingTop="15dp"
                app:shapeAppearanceOverlay="@style/ImageRoundedCorners"
                android:scaleType="centerCrop"
                android:layout_margin="2dp"
                app:layout_constraintTop_toBottomOf="@id/join_us_tv"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingStart="15dp"
                android:src="@drawable/instagram"
                />
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/whats_up"
                android:paddingTop="15dp"
                app:shapeAppearanceOverlay="@style/ImageRoundedCorners"
                android:scaleType="centerCrop"
                android:layout_margin="2dp"
                app:layout_constraintTop_toBottomOf="@id/join_us_tv"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingStart="15dp"
                android:src="@drawable/whatsapp"
                />
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/linked_in"
                android:paddingTop="15dp"
                app:shapeAppearanceOverlay="@style/ImageRoundedCorners"
                android:scaleType="centerCrop"
                android:layout_margin="2dp"
                app:layout_constraintTop_toBottomOf="@id/join_us_tv"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingStart="15dp"
                android:src="@drawable/linkedin"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>








