<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.auth.LoginActivity"
    >

    <ImageView
        android:layout_width="380dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/top_guide_line2"
        android:src="@drawable/iilust_staurated"
        android:tintMode="multiply"
        android:backgroundTint="@color/light_gray"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/login_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:shapeAppearanceOverlay="@style/ImageRoundedCorners_bckground"
        style="@style/login_and_signup_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_guide_line"
        />

    <TextView
        android:id="@+id/login_app_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/app_name"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/login_background" />

    <TextView
        android:id="@+id/login_descrition_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/always_here"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_app_name_tv" />

    <TextView
        android:id="@+id/signup_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       style="@style/signin_and_signup_text_color"
        android:fontFamily="@font/poppins_semibold"
        android:text="Email"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_descrition_tv" />


    <EditText
        android:id="@+id/login_email_et"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_email_tv"
        style="@style/edit_text_style"
        android:maxLines="1"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:hint="Email"
        android:textSize="13sp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="20dp"
        android:paddingStart="15dp"
        />
    <TextView
        android:id="@+id/signup_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/signin_and_signup_text_color"
        android:fontFamily="@font/poppins_semibold"
        android:text="Password"
        android:layout_marginStart="25dp"
        android:layout_marginTop="17dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email_et" />



    <EditText
        android:id="@+id/login_password_et"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_password_tv"
        style="@style/edit_text_style"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:hint="Password"
        android:textSize="13sp"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="20dp"
        android:paddingStart="15dp"
        android:inputType="textPassword"
        />
    <ImageView
        android:id="@+id/login_show_password"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/visibility_24px"
        app:layout_constraintEnd_toEndOf="@id/login_password_et"
        app:layout_constraintTop_toTopOf="@id/login_password_et"
        app:layout_constraintBottom_toBottomOf="@id/login_password_et"
        android:layout_marginEnd="10dp"
        />
    <TextView
        android:id="@+id/login_forget_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forget Password?"
        style="@style/signin_and_signup_text_color"
        app:layout_constraintEnd_toEndOf="@id/login_password_et"
        app:layout_constraintTop_toBottomOf="@id/login_password_et"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        />
    <ProgressBar
        android:id="@+id/login_btn_pr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/login_login_btn"
        app:layout_constraintEnd_toEndOf="@id/login_login_btn"
        app:layout_constraintTop_toTopOf="@id/login_login_btn"
        app:layout_constraintBottom_toBottomOf="@id/login_login_btn"
        android:visibility="invisible"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/login_forget_password_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:fontFamily="@font/inter_medium"
        android:background="@drawable/bg"
        />

    <ImageView
        android:id="@+id/signup_continue_with"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/continue_with"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/login_login_btn"
        app:layout_constraintStart_toStartOf="parent"
    />

   <androidx.cardview.widget.CardView
       android:id="@+id/signup_google_icon"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       app:layout_constraintEnd_toStartOf="@id/signup_apple_icon"
       app:layout_constraintTop_toBottomOf="@id/signup_continue_with"
       app:layout_constraintStart_toStartOf="parent"
       app:cardCornerRadius="10dp"
       >
       <ImageView
           android:layout_width="60dp"
           android:layout_height="45dp"
           android:scaleType="centerInside"
           app:shapeAppearanceOverlay="@style/ImageRoundedCorners"
           android:background="@drawable/bg_1"
           android:src="@drawable/ic_google_svg"
           android:padding="7dp"

    />
</androidx.cardview.widget.CardView>

   <androidx.cardview.widget.CardView
       android:id="@+id/signup_apple_icon"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/signup_continue_with"
       app:layout_constraintStart_toEndOf="@id/signup_google_icon"
       app:layout_constraintEnd_toStartOf="@id/signup_face_icon"
       android:layout_marginTop="10dp"
       app:cardCornerRadius="10dp"
       >
       <ImageView
           android:layout_width="60dp"
           android:layout_height="45dp"
           android:scaleType="centerInside"
           app:shapeAppearanceOverlay="@style/ImageRoundedCorners"
           android:background="@drawable/bg_1"
           android:src="@drawable/ic_apple"
           android:padding="10dp"
           />
   </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/signup_face_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signup_continue_with"
        app:layout_constraintStart_toEndOf="@id/signup_apple_icon"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"

        app:cardCornerRadius="10dp"
        >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:scaleType="centerInside"
            app:shapeAppearanceOverlay="@style/ImageRoundedCorners"
            android:background="@drawable/bg_1"
            android:src="@drawable/icon_face"
            android:padding="10dp"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/login_signup_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account ? Signup"
        style="@style/signin_and_signup_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_apple_icon"
        android:layout_marginTop="15dp"
        android:textSize="17dp"
/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guide_line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />


</androidx.constraintlayout.widget.ConstraintLayout>